flaskapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp
  labels:
    app.kubernetes.io/part-of: exemplo  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
        - name: flaskapp
          image: exemplo:1.0.30
          ports:
            - containerPort: 8080
