flaskapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-service
spec:
  selector:
    app: flaskapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
