mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
  name: mongodb-svc
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongodb
  type: NodePort
