flaskapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flaskapp-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /exemplo
          backend:
            serviceName: flaskapp-service
            servicePort: 8887
